- Apply the alpha/opacity of the element (at the time of evaluation) for bgi/img tags
- Numeric (integer) overrides can now be specified in hex form (0x## or just ##) Example: 0xC4 (good idea) or C4 (not a good idea)
- Added Google spreadsheet browser to the Project Settings dialog.
- Added Project Settings to project menu (shocking!)

1.0.0.0
- Added limit to the number of loops of translation within Incept (should protect against typos)
- Added pixel (px) tag to allow exact pixel location to be specified for drawing with FormattedText
- Added alignment tags to override the horizontal alignment of FormattedText (useful in some situations)
- Added line spacing tag (ls) for FormattedText. This with store and override the existing line spacing.
- Significant changes to order and general translation  functionality with if/switch (Incept specific)
- Changed the issues window to indicate the layout, not the layout index
- Added option to log steps when performing an Incept translation (see settings)
- Overhaul of float/decimal parsing to allow for cross region support (well hopefully). Both ',' and '.' should be usable as a decimal separator. Thanks to kek444!
- Add override for the Google project wide defines (project level setting)
- Adjusted handling of newlines from Google Spreadsheets and CSVs (converted to \n)
- Added middle-mouse panning functionality for the canvas
- Added on canvas rotation mode (can be toggled with 'r')
- Added ability to resize layouts (keeping the relative location of the elements centered)
- Added Triangle shape
- Added ability to translate primitives (quotes/commas) in the definitions dialog
- Added ability to duplicate a layout to a new size and resize layouts (includes options for maintaining relative element positions)
- Added element edge guides (optional)
- Added ability to copy element settings (customizable so you can copy only the settings you need)
- Added bounds drawing for rotated elements (optional)